# pl0t

./: .VERSION  .gitignore  LICENCE  MANIFEST.in  Makefile  README.md  _prep_data-iface.ods  requirements.txt  setup.cfg  setup.py  test_vline.py
pl0t/: __init__.py
pl0t/tests/: test_ax.py  test_bplt.py  test_fill-in.py  test_hist.py  test_ind.py  test_line.py  test_multiple_plots.py  test_pl0t.py  test_rot_ax_labs.py  test_scatter.py  test_title.py  test_tutils.py  tutils.py
pl0t/tests/datum/: df.csv  labels.txt
