[metadata]
name = "pl0t",
author = "Benoit FREMON",
author_email = "ben@in.volution.fr",
description = "Seaborn wrappers and convenience funcs",
long_description = "Seaborn wrappers and convenience funcs",
license = "GPL",
url = "https://git.volution.fr:4444/pl0t",
packages = ['pl0t'],
classifiers=[
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
    ],

[options]
packages = find: